<resources>
    <string name="app_name">StuntFree</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_insight">Insight</string>
    <string name="title_service">Service</string>
    <string name="title_forum">Forum</string>
    <string name="title_profile">Profile</string>
    <string name="title_calendar">Calendar</string>
    <string name="error_invalid_email">Email Format Not Valid</string>
    <string name="error_password_length">Password must be 8 caracters</string>
    <string name="error_password_not_same">Password can be same at password</string>
    <string name="error_empty_name">Name can be ot fill</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="navigate_back">Navigate Back</string>
    <string name="text_scanning">Scanning</string>
    <string name="text_scan_icon">Scan Icon</string>
    <string name="text_flash">Flash</string>
    <string name="text_take_photo">Take Photo</string>
    <string name="text_upload">Upload</string>
    <string name="text_next">Next</string>
    <string name="text_todays_log">Today’s Log</string>
    <string name="text_stunting_status">Stunting Status</string>
    <string name="text_nutrition_intake">Nutrition Intake</string>
    <string name="text_environmental_conditions">Environmental Conditions</string>
    <string name="text_edit_icon">Edit Icon</string>
    <string name="text_add_more">Add More</string>
    <string name="text_logo_stunt_free">Stunt Free</string>
    <string name="text_login_register">StuntFree - Number #1 Stunting Prevention and Detection Apps</string>
    <string name="text_message_loginregister">Login and Register and we\'ll get started</string>
    <string name="text_email">Email</string>
    <string name="ex_email">ex: stuntfree@bangkit.com</string>
    <string name="text_password">Password</string>
    <string name="text_forgot_password">Forgot Password?</string>
    <string name="text_login">Login</string>
    <string name="text_to_register">Don\'t have an account? Register</string>
    <string name="text_logo">Logo</string>
    <string name="text_message_newborn">Please, fill in the following child’s information correctly.</string>
    <string name="text_child_birth">What is your child\'s birth date?</string>
    <string name="text_ex_childbirth">ex:2023-06-02</string>
    <string name="text_address">Your Address</string>
    <string name="text_hint_address">ex: BSB City, Semarang</string>
    <string name="text_nutrition_fullfilment">Was the previous nutrition fulfillment met?</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="text_suround_envi">Is the surrounding environment suitable?</string>
    <string name="text_gender">Child’s Gender</string>
    <string name="text_male">Male</string>
    <string name="text_female">Female</string>
    <string name="text_height_birth">Child\'s height at birth (Cm)</string>
    <string name="text_hint_birth">ex:60</string>
    <string name="text_weight_birth">Child\'s weight at birth (Kg)</string>
    <string name="text_hint_weight_birth">ex:6</string>
    <string name="text_current_height">Child\'s current height (Cm)</string>
    <string name="text_hint_current">ex:70</string>
    <string name="text_current_weight">Child\'s current weight (Kg)</string>
    <string name="text_hint_current_weight">ex:21</string>
    <string name="text_finish">Finish</string>
    <string name="text_message_preganancy">Please, fill in the following information correctly.</string>
    <string name="text_weeks_pregnancy">How many weeks old is your pregnancy?</string>
    <string name="text_hint_pregnancy">ex: 12</string>
    <string name="message_quiz">Please, fill in the following child’s information correctly.</string>
    <string name="text_title_pregnan">Pregnancy</string>
    <string name="text_message_pregnan">Start analyze your child progress earlier</string>
    <string name="text_title_newborn">Have a New Born</string>
    <string name="text_message_haveanewborn">Monitor your child growth daily</string>
    <string name="text_stunt_free">Stunt Free</string>
    <string name="text_name">Name</string>
    <string name="text_hint_name">ex: John Doe</string>
    <string name="text_confirm_password">Confirm Password</string>
    <string name="text_register">Register</string>
    <string name="text_have_account">Already have an account? Login</string>
    <string name="text_input_data">Input Data</string>
    <string name="text_save_my_food">Save My Food Logs</string>
    <string name="text_tanggal">17 November 2024</string>
    <string name="text_title_stunting_status">Stunting Status</string>
    <string name="text_stunting_detect">3 Hari sebelum proses deteksi stunting</string>
    <string name="text_title_nutrition">Nutrition Intake</string>
    <string name="text_not_full">Not Fulfilled</string>
    <string name="text_title_envi">Environmental Conditions</string>
    <string name="text_envi">Healthy Environment</string>
    <string name="text_title_today_meal">Today’s Meal #1</string>
    <string name="text_profile">Profile</string>
    <string name="text_calendar">Calendar</string>
    <string name="text_daily_routines">My Daily Routines • Today</string>
    <string name="text_log_symptoms">Log Symptoms</string>
    <string name="text_camera_scan">Camera Scan</string>
    <string name="text_quick_call">Quick Call</string>
    <string name="text_for_you">For you • Insight during pregnancy</string>
    <string name="text_no_result">No results found</string>
    <string name="text_early_detection">Early Detection fo r Bright Futures</string>
    <string name="text_message_onboarding">Identifying and addressing stunting early to protect children\'s development.</string>
    <string name="text_edit_profile">Edit Profile</string>
    <string name="text_status">Status</string>
    <string name="text_field_status">Pregnancy</string>
    <string name="text_age">Age</string>
    <string name="text_field_age">3 Years</string>
    <string name="text_title_stunting">Stunting</string>
    <string name="text_field_stunting">Healthy</string>
    <string name="text_setting">Settings</string>
    <string name="text_stunting_report">Stunting Report Analysis</string>
    <string name="text_arrow_right">Arrow Icon</string>
    <string name="text_edit_child">Edit Child Information</string>
    <string name="text_language">Language</string>
    <string name="text_title_logout">Logout</string>
    <string name="text_available_doctor">Avaible Doctor Nearby</string>
    <string name="text_available_helatcare">Avaible Healthcare Nearby</string>
    <string name="text_day">M</string>
    <string name="text_days">27</string>
    <string name="text_food_name">Food Name</string>
    <string name="text_name_eat">Nasi (1)</string>
    <string name="text_title_item_food">Energy</string>
    <string name="text_field_food">130.0 kcal</string>
    <string name="text_created">Created At</string>
    <string name="text_title_insight">Title Insight here</string>
    <string name="text_emergency_call">Emergency Call</string>
    <string name="text_message_emergency_call">Are you want to call emergency call for now?</string>
    <string name="text_title_quick_emergency_call">Quick Emergency Call</string>
    <string name="text_redirect_maps">Redirect to Maps</string>
    <string name="text_message_redirect_maps">Are you want to redirected to the route of Place?</string>
    <string name="text_title_environt">Environmental</string>
    <string name="text_fail">Failed! 😭</string>
    <string name="text_message_failed">Failed inputting nutritional food data into your daily log. Try Again!</string>
    <string name="text_title_logout_acc">Logout Account</string>
    <string name="text_message_logout_acc">Are you sure want to logout your account?</string>
    <string name="text_title_success">Success! 🎉</string>
    <string name="text_message_success">Success inputting nutritional food data into your daily log!</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_logout">Logout</string>
    <string name="text_message_environment">Is the surrounding environment suitable, clean and healthy for today?</string>
    <string name="text_nopoor">No, Poor</string>
    <string name="text_yes_healty">Yes, Healty</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_open_maps">Open Maps</string>
    <string name="text_message_quick_emergency">Are you want to call emergency call for now?</string>
    <string name="text_call">Call Now</string>

</resources>