<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:id="@+id/logoTextContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/logoImage"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_question_quiz"
                android:contentDescription="@string/text_logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_background_text"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginLeft="8dp"
                android:padding="14dp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="14dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/text_message_newborn"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/gender_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_gender"
                android:textSize="16sp"
                android:textColor="@android:color/black" />

            <RadioGroup
                android:id="@+id/radio_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="2dp"
                android:gravity="start">

                <RadioButton
                    android:id="@+id/radio_yes_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_male"
                    android:padding="8dp" />

                <RadioButton
                    android:id="@+id/radio_no_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_female"
                    android:padding="8dp" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/height_birth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_height_birth"
                android:textSize="16sp"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/et_height_birth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_hint_birth"
                android:background="@drawable/spinner_rounded"
                android:padding="12dp"
                android:layout_marginTop="8dp"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/weight_birth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_weight_birth"
                android:textSize="16sp"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/et_weight_birth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_hint_weight_birth"
                android:background="@drawable/spinner_rounded"
                android:padding="12dp"
                android:layout_marginTop="8dp"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/current_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_current_height"
                android:textSize="16sp"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/et_current_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_hint_current"
                android:background="@drawable/spinner_rounded"
                android:padding="12dp"
                android:layout_marginTop="8dp"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/current_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_current_weight"
                android:textSize="16sp"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/et_current_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_hint_current_weight"
                android:background="@drawable/spinner_rounded"
                android:padding="12dp"
                android:layout_marginTop="8dp"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_finish"
        android:padding="16dp"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="20dp" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>