<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:id="@+id/logoTextContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/logoImage"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_question_quiz"
                android:contentDescription="@string/text_logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_background_text"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginLeft="8dp"
                android:padding="14dp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="14dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/text_message_newborn"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp">

            <TextView
                android:id="@+id/questionJumlah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_child_birth"
                android:textSize="16sp"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/etUmur"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_ex_childbirth"
                android:background="@drawable/spinner_rounded"
                android:padding="17dp"
                android:layout_marginTop="8dp"
                android:clickable="true"
                android:focusable="true" />
        </LinearLayout>


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/question_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_address"
                android:textSize="16sp"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/et_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_hint_address"
                android:background="@drawable/spinner_rounded"
                android:padding="12dp"
                android:layout_marginTop="8dp"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/questionTerpenuhi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_nutrition_fullfilment"
                android:textSize="16sp"
                android:textColor="@android:color/black" />

            <RadioGroup
                android:id="@+id/radio_nutrition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:gravity="start">

                <RadioButton
                    android:id="@+id/radio_yes_nutrition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_yes"
                    android:padding="8dp" />

                <RadioButton
                    android:id="@+id/radio_no_nutrition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_no"
                    android:padding="8dp" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/questionKelayakan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_suround_envi"
                android:textSize="16sp"
                android:textColor="@android:color/black" />

            <RadioGroup
                android:id="@+id/radio_environment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:gravity="start">

                <RadioButton
                    android:id="@+id/radio_yes_envi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_yes"
                    android:padding="8dp" />

                <RadioButton
                    android:id="@+id/radio_no_envi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_no"
                    android:padding="8dp" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_next"
        android:textAllCaps="false"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="20dp" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>